kubernetes/applications/nextcloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-https-ingress
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.slux-solutions.com`)
      kind: Rule
      services:
        - name: nextcloud-service
          port: 80
  tls:
    secretName: slux-solutions-wildcard-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-http-ingress
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cloud.slux-solutions.com`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: nextcloud
      services:
        - name: nextcloud-service
          port: 80
